Fix visibility offcanvas-toggle in header

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -68,6 +68,10 @@ $header_searchbox-margin-to-cover-search-item: -6.8rem !default;
     &__offcanvas-toggle {
         height: 100%;
         flex: 0 1 4rem;
+
+        @include media('>=laptop') {
+            display: none;
+        }
     }
 
     &__logo {
