--- a/src/components/offcanvas-toggle/offcanvas-toggle.scss
+++ b/src/components/offcanvas-toggle/offcanvas-toggle.scss
@@ -47,10 +47,6 @@ $offcanvas-toggle_animation-direction: 'left' !default; // 'left' or 'right'
         }
     }
 
-    @include media('>=laptop') {
-        display: none;
-    }
-
     &--active {
         &,
         &:active,
